--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-<html><head>
-    <title>Example Domain</title>   
-</head>
+<html>
 
 <body>
 <div>
-    <h1>Example Domain</h1>
+    <h1>Hello world</h1>
 </div>
 
 
